--- a/Readme.org
+++ b/Readme.org
@@ -1,8 +1,10 @@
 #+TITLE: Serial Communication Library
 #+AUTHOR: Zach Porter, Erdem Yanikomerolgu
 
-* Purpose
-This serial communication library, formerly Team 1's mini project, is intended to provide a easy to implement interface to interact with UART, I2C, and SPI devices.
+* What is libserial
+Libserial was formerly Team 1's mini project that has now been adapted into a serial communication libray for use in your programs. Libserial provides drivers for the 3 communication protocols availables on the KL25Z. Namely UART, I2C, and SPI. Libserial should allow for easy implementation of these protocols without reinventing the wheel.
+
+Libserial is a Keil project that is set to produce a static library instead of an executable. This should allow for easier implementation into your different programs without having to copy files around.
 
 ** Currently Implemented Drivers
 + [ ] UART
@@ -12,6 +14,8 @@ This serial communication library, formerly Team 1's mini project, is intended t
 * Setup Instructions
 The setup instructions assume you have an existing project you wish to implement serial communication in.
 
+** Setting up the include path
+
 1. Clone this repository to your computer. (~git clone https://github.com/zachporter1999/SYSC-4907-mini-proj.git~)
 2. Open the library project and build it.
 3. In your existing project, under "~Options for Target 1 >> C/C++ (AC6) >> Include Paths~" add the ralative path to the "~libserial//inc~" diretory
@@ -20,9 +24,11 @@ The setup instructions assume you have an existing project you wish to implement
 #+NAME: fig:include-setup
 [[./Documentation/out/setup/inc.png]]
 
-4. In the project window at the left side of the Keil IDE, right click on the "~Target 1~" folder and add a new group.
-5. Rename this new group/folder to lib.
-6. right click on the "~lib~" folder, add existing item, and add the "~libserial//Objects//libserial.lib~"
+** Linking the library
+
+1. In the project window at the left side of the Keil IDE, right click on the "~Target 1~" folder and add a new group.
+2. Rename this new group/folder to lib.
+3. right click on the "~lib~" folder, add existing item, and add the "~libserial//Objects//libserial.lib~"
 
 #+CAPTION: Where to create the "/lib/" folder to add the "/.lib/" file to.
 #+NAME: fig:library-setup
