Removed md in favour for org

--- a/Readme.org
+++ b/Readme.org
@@ -12,7 +12,7 @@ Libserial is a Keil project that is set to produce a static library instead of a
 + [ ] SPI
 
 * Setup Instructions
-The setup instructions assume you have an existing project you wish to implement serial communication in.
+These setup instructions only apply if you are wanting to link libserial to other existing Keil Project. This Repo is already setup to develop and test libserial.
 
 ** Libserial install and build
 
@@ -33,11 +33,16 @@ The Library setup is finished. Now lets setup your existing Keil to link this li
 
 1. In the project window at the left side of the Keil IDE, right click on the "~Target 1~" folder and add a new group.
 2. Rename this new group/folder to lib.
-3. right click on the "~lib~" folder, add existing item, and add the "~libserial//Objects//libserial.lib~"
+3. Right-click on the "~lib~" folder, add existing item, and add the "~libserial//Objects//libserial.lib~"
+4. RIght-click on "~lib~" file in the projects lib folder and select the options for that file. Then click select modules and the modules you want.
+
+#+CAPTION: Where to select modules.
+#+NAME: fig:library-setup
+[[./Documentation/out/setup/lib.png]]
 
 #+CAPTION: Where to create the "/lib/" folder to add the "/.lib/" file to.
 #+NAME: fig:library-setup
-[[./Documentation/out/setup/lib.png]]
+[[./Documentation/out/setup/select-lib.png]]
 
 In order to use this library in your code you will need to include the appropriate header files.
 
